# dlpc350

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: GetHidapi.cmake
include/dlpc350/: controller.hpp  dlpc350.hpp  message.hpp  pattern.hpp  status.hpp  usb.hpp
include/multi350/: controller.hpp  dlpc350.hpp  message.hpp  pattern.hpp  status.hpp  usb.hpp
include/multi350/misc/: gui.hpp
src/: controller.cpp  dlpc350.cpp  status.cpp  usb.cpp
